[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/pipe.gd" type="Script" id=1]
[ext_resource path="res://Sprites/pipes.png" type="Texture" id=2]
[ext_resource path="res://Samples/smw_coin.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.6667, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 112 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 144 )

[node name="pipe" type="Node2D"]
z_index = -2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 208 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="body" type="StaticBody2D" parent="sprite"]

[node name="shape" type="CollisionShape2D" parent="sprite/body"]
position = Vector2( -1.33333, 0 )
shape = SubResource( 1 )

[node name="sprite2" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, -208 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
flip_v = true

[node name="body" type="StaticBody2D" parent="sprite2"]

[node name="shape" type="CollisionShape2D" parent="sprite2/body"]
position = Vector2( -1.33333, 0 )
shape = SubResource( 1 )

[node name="ponto" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="ponto"]
position = Vector2( 21, 0 )
shape = SubResource( 2 )

[node name="body" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="body"]
position = Vector2( 0, -208 )
shape = SubResource( 3 )

[node name="shape2" type="CollisionShape2D" parent="body"]
position = Vector2( -2, 207 )
shape = SubResource( 3 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

[node name="coin_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="ponto" to="." method="_on_ponto_body_entered"]
[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
